     was added, which also cares to match `UPSNAME` and `NOTIFYTYPE` values
     (if passed). [#3097]
   * Introduced support for `DEBUG_MIN` setting via `upssched.conf`. [#3097]
   * Introduced `upssched -l` mode to list currently tracked timers. [#3097]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]

 - `configure` script options:
   * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
     module installation location (for module-named dir to be created under
     it), if not bundling with NUT-Monitor UI app. By default the respective
     interpreter's 'site-packages' or 'dist-packages' location will be used,
     so you may have to adjust search paths for any other values. [#3062]

 - Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
   include the source distribution (was posted for NUT v2.8.1 and v2.8.2
   tagged releases, but absent for v2.8.3 and v2.8.4). [#3056]

 - Updated `make spellcheck` to help avoid asciidoc admonition blocks with
   visually invalid sentences (after rendering as a box in HTML or PDF). [#3077]

 - Updated `docs/*.txt`: add asciidoc comments with links to nut-website
   rendered contents of most interesting pages. [#3095]

 - Revised CI and deliverable scripts, and Makefile recipes, to not use
   the verbatim `grep -E` (loudly preferred by newer systems, but may be
   absent on older ones) after all, nor use `egrep` (loudly disliked by
   newer systems). Instead, use what `configure` script detected for the
   generated files (or ones made from templates), and use a similar
   detection in standalone scripts. Also revised the use of `grep -q`,
   `id -u`, `diff -u`, etc. which are not ubiquitous, and of `test -e`
   which is not only absent in some older shells, but can cause them to
   abort processing the script immediately. Also the `if ! condition`
   syntax is not supported everywhere (or the `!` operator generally).
   [#3099, #1660]

